--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 # Ignore specific files and carpets
 /bin/
 /obj/
-/appsettings.json
+/appsettings.Development.json
+/Data/Migrations/
 *.bak
 *.log
 .vs/
