Add DB Relations

--- a/HomeHero/appsettings.json
+++ b/HomeHero/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conn": "Server= DESKTOP-J2SISMS\\SQLEXPRESS;Database=HomeHero;TrustServerCertificate=True;Integrated Security=True"
+  }
 }
