--- a/HomeHero/appsettings.json
+++ b/HomeHero/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conn": "Server= DESKTOP-J2SISMS\\SQLEXPRESS;Database=HomeHero;TrustServerCertificate=True;Integrated Security=True"
+    "Conn": "Server= XXXXXX/XXXXXX;Database=HomeHero;TrustServerCertificate=True;Integrated Security=True"
   }
 }
