--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /HomeHero/appsettings.json
+/HomeHero/appsettings.Development.json
+/HomeHero/Migrations
